# learnmate-ai

./: .env.example  .gitignore  CLAUDE.md  Modelfile  README.md  README_ASSESSMENT.md  README_TESTING.md  agent.ipynb  agent.py  config.py  conversation_controller.py  interactive_assessment_client.py  main.py  mcp_basic_example.py  pinecone_search.sh  pinecone_search_document.py  pinecone_search_document.sh  pinecone_search_kmooc.py  pinecone_search_kmooc.sh  pinecone_use.py  pyproject.toml  requirements.txt  sessions.json  test.ipynb  test_api.sh  test_curriculum.py  test_dataset_map.html  test_mcp.py  test_optimized_curriculum.py  tool1.py  utils.py
.virtual_documents/: agent.ipynb
data/: curriculums.json  daily_plans.json  progress.json
docs/: MES운영매뉴얼_2024하반기.json  MES운영매뉴얼_ESS용.json  MES운영매뉴얼_글로벌표준.json  MES운영매뉴얼_기술혁신.json  MES운영매뉴얼_디지털전환.json  MES운영매뉴얼_스마트팩토리.json  MES운영매뉴얼_안전강화.json  MES운영매뉴얼_전기차용.json  MES운영매뉴얼_품질개선.json  MES운영매뉴얼_해외공장.json  MES운영매뉴얼_환경개선.json  MES운영매뉴얼_효율향상.json  공급망관리가이드_2024하반기.json  공급망관리가이드_공정최적화.json  공급망관리가이드_기술혁신.json  공급망관리가이드_디지털전환.json  공급망관리가이드_법규준수.json  공급망관리가이드_인력양성.json  공급망관리가이드_품질개선.json  공급망관리가이드_해외공장.json  공급망관리가이드_효율향상.json  기술자역량개발프로그램.json  기술자역량개발프로그램_2024하반기.json  기술자역량개발프로그램_기술혁신.json  기술자역량개발프로그램_디지털전환.json  기술자역량개발프로그램_안전강화.json  기술자역량개발프로그램_인력양성.json  기술자역량개발프로그램_전기차용.json  기술자역량개발프로그램_해외공장.json  기술자역량개발프로그램_환경개선.json  기술자역량개발프로그램_효율향상.json  기술특허분석보고서_2024하반기.json  기술특허분석보고서_공정최적화.json  기술특허분석보고서_글로벌표준.json  기술특허분석보고서_기술혁신.json  기술특허분석보고서_법규준수.json  기술특허분석보고서_스마트팩토리.json  기술특허분석보고서_안전강화.json  기술특허분석보고서_인력양성.json  (+272 more)
(+90 files in other folders)
