[project]
name = "learnmate-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "lxml>=6.0.1",
    "numpy>=2.3.2",
    "pinecone>=7.3.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.0",
    "fastmcp>=0.3.0",
    "httpx>=0.25.2",
    "uvicorn>=0.24.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "langchain-neo4j>=0.5.0",
]
